--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -556,28 +556,29 @@ São necessidades por serviços que envolvam soluções de Tecnologia da Informa
 | NS1  | Acompanhamento de rendimento por servidor vinculado ao SEI                                  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
 | NS2  | Acompanhamento e controle de saldos das notas de empenho e saldos de contratos - SIMINC     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
 | NS3  | Acompanhamento histórico de tramitações                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
-| NS4  | Banco de informações das fichas de monitoramento das metas do PNC                           | Atualmente, a coleta das informações do Sistema MinC é feita por meio de fichas de monitoramento em documento Word. Após as análises dessas fichas, as informações são sistematizadas em fichas no Excel. Cada meta possui o seu próprio documento. Devido à fragilidade do próprio excel (mudança de fórmulas de cálculo, perda de vínculos das fórmulas...) é importante que essas fichas sejam sistematizadas em um banco de informações próprio, até para controlar as últimas alterações feitas nas informações.                                                       | SDAPI,            | 
-| NS5  | Base de Dados integrada ao Sistema de Registro de Direitos Autorais                         | Mapeamento, digitalização das informações e do acervo do EDA-FBN  e integração ao  Sistema de Registro e Gestão de Direitos Autorais.                                                                                                                                                                                                                                                                                                                                                                                                                                       | SDAPI             | 
-| NS6  | Coleta de informações das fichas de monitoramento das metas do PNC                          | Atualmente, está em construção junto à CGTEC e à SPOA a adaptação do SIMINC para que ele possa substituir a forma de coleta de informações junto ao Sistema Minc, que é feita por meio de fichas de monitoramento em documento word.                                                                                                                                                                                                                                                                                                                                        | SDAPI,            | 
-| NS7  | Consulta Pública                                                                            | Realizar o suporte técnico para utilização do Delibera na Plataforma do CNPC durante a realização de Consultas Públicas                                                                                                                                                                                                                                                                                                                                                                                                                                                     | SDAPI,            | 
-| NS8  | Controle de concessão de cartões de acesso dos servidores ao prédio e garagem               | Desenvolvimento de sistema                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | SPOA,             | 
-| NS9  | Controle dos contratos terceirizados                                                        | Software para controle das informações relacionadas a fiscalização e gestão dos contratos: Prazos de vigência, saldo de empenho, controle das glosas e níveis de serviços, etc.                                                                                                                                                                                                                                                                                                                                                                                             | SPOA,             | 
-| NS10 | Debate - Sistema  Delibera na Plataforma do CNPC                                            | Realizar o suporte técnico para utilização do Delibera na Plataforma do CNPC durante a realização de Debates                                                                                                                                                                                                                                                                                                                                                                                                                                                                | SDAPI,            | 
-| NS11 | Desenvolvimento de sistema cadastral para proponentes                                       | Reunir todas as informações necessárias quanto aos dados básicos de cada um(RG do prefeito, ata de posse, regularidades fiscais etc)                                                                                                                                                                                                                                                                                                                                                                                                                                        | SDC               | 
-| NS12 | Ferramenta para cadastro das irregularidades nas prestações de contas                       | Levantou-se nos GTs de prestação de contas de Convênio e Lei Rouanet a necessidade de se desenvolver uma solução para cadastro das entidades que apresentarem irregularidades em suas prestações de contas tanto em Convênios como nos incentivos fiscais de forma a possibilidade o desarquivamento de processos arquivados dos mesmos para análise posterior.                                                                                                                                                                                                             | GM,               | 
-| NS13 | Gestão de Pessoas                                                                           | A COGEP trabalha com o RHSis, sistema ultrapassado que apresenta inúmeras falhas de execução o que impossibilita sua atualização. O sistema tornou-se obsoleto devido sua plataforma ultrapassada e cuja funcionalidades foram desenvolvidos por software proprietário.                                                                                                                                                                                                                                                                                                     | SGE,              | 
-| NS14 | Integração do Sistema de Ouvidoria ao e-Ouv (CGU)                                           | Tal ação visa cumprir o estabelecido em portaria CGU acerca da disponibilização das informações da Ouvidoria MinC em tempo real à Ouvidoria-Geral da União.                                                                                                                                                                                                                                                                                                                                                                                                                 | GM, SPOA,         | 
-| NS15 | Integração dos bancos de dados do MEC aos da Política Nacional de Cultura Viva              | A SDC já realizou um projeto piloto(culturaeduca.cc) de mapeamento de iniciaticas e Infraestruturas culturais e educacionais na cidade do Recife. Esforços foram feitos por parte da Coordenação-Geral de Cultura e Educação de expandir esse cruzamento de dados                                                                                                                                                                                                                                                                                                           | SDC,              | 
-| NS16 | Mapa do Sistema Nacional de Cultura                                                         | Customização do Mapa da Cultura para Mapa do Sisitema Nacional de Cultura                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SDAPI,            | 
-| NS17 | Melhoria no sistema solicitanet.                                                            | Sistema de solicitação de serviços do MinC.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | SPOA,             | 
-| NS18 | Melhorias e ajustes na Plataforma Rede Cultura Viva                                         | A plataforma Rede Cultura Viva, em http://culturaviva.gov.br/, foi implementada a partir do ano de 2015, com o objetivo de fornecer um sistema confiável para mapear os Pontos de cultura, além de fornecer diversas funcionalidades, como visualização de even                                                                                                                                                                                                                                                                                                             | SDC,              | 
-| NS19 | Melhorias no sistema ePraças                                                                | Finalizar o desenvolvimento do sistema ePraças, incluindo os módulos de Relatórios e Comunicação; Proceder as melhorias necessárias nos módulos já desenvolvidos, com foco em usabilidade e solução de bugs                                                                                                                                                                                                                                                                                                                                                                 | SEINFRA,          | 
-| NS20 | Módulo de Registro de Direitos Autorais                                                     | Desenvolvimento do primeiro módulo do Sistema de Registro e Gestão de Direitos Autorais, voltado à inscrição de criadores (id), registro de obras intelectuais protegidas com certificação de anterioridade e depósito digital da obra.                                                                                                                                                                                                                                                                                                                                     | SDAPI             | 
-| NS21 | Módulo do Sistema de Gestão Coletiva voltado à habilitação das entidades.                   | Desenvolvimento de ferramenta adequada para o recebimento dos pedidos de habilitação, atualização de informações, renovação de habilitação, geração de relatórios, auditoria e fiscalização das informações  recebidas                                                                                                                                                                                                                                                                                                                                                      | SDAPI             | 
-| NS22 | Monitoramento das informações dos planos estaduais e municipais                             | Hoje existem 173 planos municipais e 13 estudais, porém, ainda não é possível coletar as informações desses planos de cultura, para agregá-las nas informações de monitoramento do PNC.                                                                                                                                                                                                                                                                                                                                                                                     | SDAPI,            | 
-| NS23 | Painel de indicadores do PNC                                                                | É importante que exista um painel de indicadores que agregue todas as informações coletadas por meio do montioramento das metas do PNC. Atualmente, está em desenvolvimento o Metabse, porém, este software para ser operado adequadamente necessidade de um conhecimento específico em tecnologia da informação, não sendo possível, até o presente momento, a sua operacionalização.                                                                                                                                                                                      | SDAPI,            | 
-| NS24 | Plataforma do Sistema Nacional de Cultura                                                   | Desenvolver uma nova plataforma do Sistema Nacional de Cultura para a realização de todo o processo de adesão, chamamentos públicos e tutoriais em EAD                                                                                                                                                                                                                                                                                                                                                                                                                      | SDAPI,            | 
-| NS25 | Portais                                                                                     | Portal da Rouanet - Acessibilidade e Usabilidade, Portal do Investidor                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      | SEFIC             | 
+| NS4  | Banco de informações das fichas de monitoramento e coleta das metas do PNC                           |                                                       | SDAPI            | 
+| NS5  | Base de Dados integrada ao Sistema de Registro de Direitos Autorais                         |                                                                                                                                                                                                                                                                                                                                                                                                                                        | SDAPI             | 
+| NS6  |                         |                                                                                                                                                                                                                                                                                                                                         | SDAPI            | 
+| NS7  | Suporte técnico para utilização do Delibera na Plataforma do CNPC durante a realização de Consultas Públicas e Debates                                                                            |                                                                                                                                                                                                                                                                                                                                                                                                                                           | SDAPI            | 
+| NS8  | Controle de concessão de cartões de acesso dos servidores ao prédio e garagem               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
+| NS9  | Sistema de controle das informações relacionadas a fiscalização e gestão de contratos                                                       |                                                                                                                                                                                                                                                                                                                                                                                             | SPOA             | 
+| NS10 |                                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | SDAPI            | 
+| NS11 | Sistema de cadastro de proponentes                                       |                                                                                                                                                                                                                                                                                                                                                                                                                                         | SDC               | 
+| NS12 | Sistema de cadastro das irregularidades nas prestações de contas                       |                                                                                                                                                                                                              | GM               | 
+| NS13 | Sistema de gestão de Pessoas                                                                           |                                                                                                                                                                                                                                                                                                     | SGE              | 
+| NS14 | Integração do Sistema de Ouvidoria ao e-Ouv (CGU)                                           |                                                                                                                                                                                                                                                                                                                                                                                                                 | GM, SPOA         | 
+| NS15 | Integração dos bancos de dados do MEC aos da Política Nacional de Cultura Viva              |                                                                                                                                                                                                                                                                                                       | SDC              | 
+| NS16 | Customização do Mapa da Cultura para Mapa do Sistema Nacional de Cultura                                                        |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | SDAPI            | 
+| NS17 | Melhorias no Sistema SolicitaNet.                                                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | SPOA             | 
+| NS18 | Melhorias na Plataforma Rede Cultura Viva                                         |                                                                                                                                                                                                                                                                                                           | SDC              | 
+| NS19 | Melhorias no Sistema ePraças                                                                |                                                                                                                                                                                                                                                                                                                                                                 | SEINFRA          | 
+| NS20 | Desenvolvimento do módulo do Sistema de Registro e Gestão de Direitos Autorais                                                     |                                                                                                                                                                                                                                                                                                                                     | SDAPI             | 
+| NS21 | Desenvolvimento de módulo do Sistema de Gestão Coletiva voltado à habilitação das entidades                   |                                                                                                                                                                                                                                                                                                                                               | SDAPI             | 
+| NS22 | Monitoramento das informações dos planos estaduais e municipais                             |                                                                                                                                                                                                                                                                                                                                                                                     | SDAPI            | 
+| NS23 | Painel de indicadores do PNC                                                                |                                                                                                                                                                                      | SDAPI            | 
+| NS24 | Desenvolvimento de Plataforma do Sistema Nacional de Cultura para o processo de adesão, chamamentos públicos e tutoriais em EAD                                                 |                                                                                                                                                                                                                                                                                                                                                                                                                       | SDAPI            | 
+| NS25 |  Implementar acessibilidade e usabilidade no Portal da Rouanet                                                                                    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SEFIC             | 
+| NS25.1 | Desenvolvimento do Portal do Investidor                                                                                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SEFIC             | 
 | NS26 | Preparação do Mapas Culturais para Premiação de Iniciativas Socioculturais das Praças CEUs  | Desenvolver as configurações necessárias para usar o módulo de oportunidades do Mapas para a operacionalização do Edital de Premiação de Iniciativas Socioculturais das Praças CEUs                                                                                                                                                                                                                                                                                                                                                                                         | SEINFRA,          | 
 | NS27 | Processo eleitoral do CNPC                                                                  | Ativar a plataforma do Vota Cultura e realizar as melhorias necessárias para utilização da Plataforma durante o processo eleitoral do CNPC                                                                                                                                                                                                                                                                                                                                                                                                                                  | SDAPI,            | 
 | NS28 | Provedor Dinâmico de Informações                                                            | Desenvolvimento de uma plataforma web que disponibilize ao usuário repositório de jurisprudências com a temática de direitos autorais, artigos acadêmicos, teses de mestrado/doutorado, legislação com buscador, pareceres e decisões da SDAPI/MinC, recursos didáticos audiovisuais, realize a gestão de consultas públicas das matérias da SDAPI etc.                                                                                                                                                                                                                     | SDAPI             | 
